[UI/#12] 자산 UI 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="pink">#FFF0F0</color>
     <color name="blue">#008DFF</color>
     <color name="light_blue">#E5F3FF</color>
-    <color name="orange">FF7143</color>
+    <color name="orange">#FF7143</color>
 
     <!-- YELLOW -->
     <color name="yellow">#FFEB00</color>
