--- a/app/src/main/res/drawable/ic_qr_scan.xml
+++ b/app/src/main/res/drawable/ic_qr_scan.xml
@@ -1,42 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="20dp"
-    android:viewportWidth="22"
-    android:viewportHeight="20">
-    <path
-        android:pathData="M3.5,1.5C2.81,1.5 2.25,2.06 2.25,2.75V6.25H0.75V2.75C0.75,1.231 1.981,0 3.5,0H7V1.5H3.5Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M3.5,18.5C2.81,18.5 2.25,17.94 2.25,17.25V13.75H0.75V17.25C0.75,18.769 1.981,20 3.5,20H7V18.5H3.5Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M18.5,1.5C19.19,1.5 19.75,2.06 19.75,2.75V6.25H21.25V2.75C21.25,1.231 20.019,0 18.5,0H15V1.5H18.5Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M18.5,18.5C19.19,18.5 19.75,17.94 19.75,17.25V13.75H21.25V17.25C21.25,18.769 20.019,20 18.5,20H15V18.5H18.5Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M22,11H0V9.5H22V11Z"
-        android:fillColor="#FF3C3C"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M4.75,5.25H6.25V15.25H4.75V5.25Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M12.25,5.25H13.75V15.25H12.25V5.25Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M14.75,5.25H17.25V15.25H14.75V5.25Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
-    <path
-        android:pathData="M7.25,5.25H10.75V15.25H7.25V5.25Z"
-        android:fillColor="#060B11"
-        android:fillType="evenOdd"/>
+    android:width="28dp"
+    android:height="28dp"
+    android:viewportWidth="28"
+    android:viewportHeight="28">
+  <path
+      android:pathData="M3.476,3.476C4.101,2.851 4.949,2.5 5.833,2.5H10.333V4.5H5.833C5.48,4.5 5.141,4.64 4.891,4.891C4.64,5.141 4.5,5.48 4.5,5.833V10.333H2.5V5.833C2.5,4.949 2.851,4.101 3.476,3.476ZM17.667,2.5H22.167C23.051,2.5 23.899,2.851 24.524,3.476C25.149,4.101 25.5,4.949 25.5,5.833V10.333H23.5V5.833C23.5,5.48 23.36,5.141 23.11,4.891C22.859,4.64 22.52,4.5 22.167,4.5H17.667V2.5ZM4.5,17.667V22.167C4.5,22.52 4.64,22.859 4.891,23.11C5.141,23.36 5.48,23.5 5.833,23.5H10.333V25.5H5.833C4.949,25.5 4.101,25.149 3.476,24.524C2.851,23.899 2.5,23.051 2.5,22.167V17.667H4.5ZM25.5,17.667V22.167C25.5,23.051 25.149,23.899 24.524,24.524C23.899,25.149 23.051,25.5 22.167,25.5H17.667V23.5H22.167C22.52,23.5 22.859,23.36 23.11,23.11C23.36,22.859 23.5,22.52 23.5,22.167V17.667H25.5Z"
+      android:fillColor="#060B11"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M15.378,18V9.545H18.87C20.769,9.545 21.894,10.553 21.894,12.252V12.264C21.894,13.377 21.302,14.303 20.364,14.672L22.146,18H20.142L18.565,14.936H17.147V18H15.378ZM17.147,13.594H18.677C19.556,13.594 20.083,13.096 20.083,12.264V12.252C20.083,11.443 19.526,10.928 18.653,10.928H17.147V13.594Z"
+      android:fillColor="#060B11"/>
+  <path
+      android:pathData="M10.518,18.146C8.004,18.146 6.439,16.465 6.439,13.775V13.764C6.439,11.074 8.016,9.398 10.518,9.398C13.025,9.398 14.596,11.08 14.596,13.764V13.775C14.596,15.293 14.098,16.488 13.207,17.244L14.309,18.791H12.627L12.006,17.918C11.555,18.07 11.057,18.146 10.518,18.146ZM10.518,16.646C10.705,16.646 10.893,16.623 11.063,16.582L10.014,15.1H11.695L12.205,15.826C12.58,15.334 12.785,14.631 12.785,13.775V13.764C12.785,12 11.906,10.898 10.518,10.898C9.135,10.898 8.244,11.994 8.244,13.764V13.775C8.244,15.545 9.129,16.646 10.518,16.646Z"
+      android:fillColor="#060B11"/>
 </vector>
