--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <!--        <item name="colorPrimaryVariant">@color/white</item>-->
         <!--        <item name="colorOnPrimary">@color/white</item>-->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:includeFontPadding">false</item>
     </style>
