--- a/app/src/main/res/layout/item__recent_account.xml
+++ b/app/src/main/res/layout/item__recent_account.xml
@@ -5,7 +5,7 @@
     android:background="@color/white">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_recent_user_profile"
+        android:id="@+id/iv_recent_user_bank_logo"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="22dp"
@@ -22,8 +22,8 @@
         android:layout_marginStart="12dp"
         android:text="김도훈"
         android:textAppearance="@style/TextAppearance.Android.Body3Bold"
-        app:layout_constraintStart_toEndOf="@id/iv_recent_user_profile"
-        app:layout_constraintTop_toTopOf="@id/iv_recent_user_profile" />
+        app:layout_constraintStart_toEndOf="@id/iv_recent_user_bank_logo"
+        app:layout_constraintTop_toTopOf="@id/iv_recent_user_bank_logo" />
 
     <TextView
         android:id="@+id/tv_recent_account_user_bank"
@@ -32,7 +32,7 @@
         android:layout_marginStart="12dp"
         android:text="카카오뱅크"
         android:textAppearance="@style/TextAppearance.Android.Detail2Regular"
-        app:layout_constraintStart_toEndOf="@id/iv_recent_user_profile"
+        app:layout_constraintStart_toEndOf="@id/iv_recent_user_bank_logo"
         app:layout_constraintTop_toBottomOf="@id/tv_recent_account_user_name" />
 
     <TextView
@@ -45,12 +45,13 @@
         app:layout_constraintStart_toEndOf="@id/tv_recent_account_user_bank"
         app:layout_constraintTop_toBottomOf="@id/tv_recent_account_user_name" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/btn_recent_user_favorite"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_marginEnd="24dp"
-        android:button="@drawable/selector_star"
+        android:button="@null"
+        android:background="@drawable/selector_star"
         android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
