--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -524,40 +524,26 @@
                     app:layout_constraintTop_toTopOf="@id/iv_home_total_chevrons" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_home_view_pager"
+                    android:id="@+id/cl_home_rv_total_content"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="12dp"
                     android:paddingBottom="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_home_total_title">
 
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/vp_home_total_content"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_home_total_content"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
-                        android:id="@+id/vp_home_total_content_dots_indicator"
-                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:dotsColor="@color/black"
-                        app:dotsCornerRadius="4dp"
-                        app:dotsSize="8dp"
-                        app:dotsSpacing="6dp"
-                        app:dotsStrokeColor="@color/grey500"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:clipToPadding="false"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="20dp"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginTop="16dp"
-                        app:layout_constraintTop_toBottomOf="@id/vp_home_total_content" />
-
+                        app:layout_constraintBottom_toBottomOf="parent"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
