[FIX/#36] 병합 누락 코드 추가

--- a/app/src/main/res/layout/fragment_assets.xml
+++ b/app/src/main/res/layout/fragment_assets.xml
@@ -118,7 +118,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txv_asset_saved"
+                            android:id="@+id/tv_asset_saved"
                             android:layout_width="110dp"
                             android:layout_height="27dp"
                             android:fontFamily="@font/noto_sans_kr"
